// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`langReplPlugin > should work with custom options 1`] = `
"<VPCodeRepl title="go playground"><pre><code class="language-go"><div class="language-go"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="go playground"><pre><code class="language-go"><div class="language-go"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="kotlin playground"><pre><code class="language-kotlin"><div class="language-kotlin"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="kotlin playground"><pre><code class="language-kotlin"><div class="language-kotlin"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="rust playground"><pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="rust playground"><pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="title"><pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="title"><pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="python playground"><pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="python playground"><pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="title"><pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="title"><pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
</VPCodeRepl>"
`;

exports[`langReplPlugin > should work with custom options 2`] = `
"export default {
  "grammars": {
    "kotlin": {
      "language": "kotlin"
    },
    "go": {
      "language": "go"
    },
    "rust": {
      "language": "rust"
    },
    "python": {
      "language": "python"
    }
  },
  "theme": {
    "light": {
      "theme": "github-light"
    },
    "dark": {
      "theme": "github-dark"
    }
  }
}"
`;

exports[`langReplPlugin > should work with custom theme 1`] = `
"<VPCodeRepl title="go playground"><pre><code class="language-go"><div class="language-go"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="go playground"><pre><code class="language-go"><div class="language-go"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="kotlin playground"><pre><code class="language-kotlin"><div class="language-kotlin"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="kotlin playground"><pre><code class="language-kotlin"><div class="language-kotlin"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="rust playground"><pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="rust playground"><pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="title"><pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="title"><pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="python playground"><pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="python playground"><pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl title="title"><pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
</VPCodeRepl><VPCodeRepl editable title="title"><pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
</VPCodeRepl>"
`;

exports[`langReplPlugin > should work with custom theme 2`] = `
"export default {
  "grammars": {
    "kotlin": {
      "language": "kotlin"
    },
    "go": {
      "language": "go"
    },
    "rust": {
      "language": "rust"
    },
    "python": {
      "language": "python"
    }
  }
}"
`;

exports[`langReplPlugin > should work with default options 1`] = `
"<p>::: go-repl</p>
<pre><code class="language-go"><div class="language-go"><pre><code>const a = 1
</code></pre></div></code></pre>
<p>:::</p>
<p>::: go-repl editable</p>
<pre><code class="language-go"><div class="language-go"><pre><code>const a = 1
</code></pre></div></code></pre>
<p>:::</p>
<p>::: kotlin-repl</p>
<pre><code class="language-kotlin"><div class="language-kotlin"><pre><code>const a = 1
</code></pre></div></code></pre>
<p>:::</p>
<p>::: kotlin-repl editable</p>
<pre><code class="language-kotlin"><div class="language-kotlin"><pre><code>const a = 1
</code></pre></div></code></pre>
<p>:::</p>
<p>::: rust-repl</p>
<pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
<p>:::</p>
<p>::: rust-repl editable</p>
<pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
<p>:::</p>
<p>::: rust-repl title=&quot;title&quot;</p>
<pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
<p>:::</p>
<p>::: rust-repl editable title=&quot;title&quot;</p>
<pre><code class="language-rust"><div class="language-rust"><pre><code>const a = 1
</code></pre></div></code></pre>
<p>:::</p>
<p>::: python-repl</p>
<pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
<p>:::</p>
<p>::: python-repl editable</p>
<pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
<p>:::</p>
<p>::: python-repl title=&quot;title&quot;</p>
<pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
<p>:::</p>
<p>::: python-repl editable title=&quot;title&quot;</p>
<pre><code class="language-python"><div class="language-python"><pre><code>hello_world()
</code></pre></div></code></pre>
<p>:::</p>
"
`;

exports[`langReplPlugin > should work with default options 2`] = `
"export default {
  "grammars": {},
  "theme": {
    "light": {
      "theme": "github-light"
    },
    "dark": {
      "theme": "github-dark"
    }
  }
}"
`;
